--- a/desktop/package.json
+++ b/desktop/package.json
@@ -40,13 +40,15 @@
     "vite-plugin-svgr": "^4.3.0"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "~2.1.0",
     "@eslint/js": "^9.14.0",
+    "@tauri-apps/cli": "~2.1.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
     "autoprefixer": "^10.4.20",
     "daisyui": "^4.12.14",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.3.0",
     "npm-check-updates": "^17.1.11",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.14",
