--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,10 @@
 members = ["core", "desktop/src-tauri"]
 resolver = "2"
 
+[patch.crates-io]
+ort = { git = "https://github.com/pykeio/ort", rev = "d1ebde95d386513fea836593815e8f86f7b96a85", default-features = false, features = ["load-dynamic"] }
+ort-sys = { git = "https://github.com/pykeio/ort", rev = "d1ebde95d386513fea836593815e8f86f7b96a85", default-features = false }
+
 [workspace.dependencies]
 eyre = { git = "https://github.com/thewh1teagle/eyre", branch = "feat/report-serialize-backtrace", features = [
 	"serialize",
